--- a/Frontend/proyect_frontend/src/app/components/usuarios/usuarios.component.html
+++ b/Frontend/proyect_frontend/src/app/components/usuarios/usuarios.component.html
@@ -24,7 +24,7 @@
         </li>        
         <!-- Titulos -->
         <li class="list-group-item lista-caja">
-          <div class="row mx-0 d-flex align-items-center">
+          <div class="row mx-0 d-flex align-items-center" style="font-weight: bold;">
             <div class="col-1 col-sm-1 col-md-1 col-lg-1 px-0">#</div>
             <div class="col-3 col-sm-3 col-md-3 col-lg-2 px-0">CI</div>
             <div class="col-2 col-sm-2 col-md-2 col-lg-2 px-0">Nombre</div>
@@ -41,7 +41,7 @@
             </div>
             <!-- CI Usuario -->
             <div class="col-3 col-sm-3 col-md-3 col-lg-2 px-0">
-                  <div class="col-12 px-0" style="color: #d4da8f">{{usu.ci_usuario}}</div>
+                  <div class="col-12 px-0">{{usu.ci_usuario}}</div>
             </div>
             <!-- Nombre Usuario -->
             <div class="col-2 col-sm-2 col-md-2 col-lg-2 px-0">
