--- a/Frontend/proyect_frontend/src/app/components/productos/productos.component.html
+++ b/Frontend/proyect_frontend/src/app/components/productos/productos.component.html
@@ -37,7 +37,7 @@
                 </div>
               </li>
               <!-- Sub-Titulos -->
-              <li class="list-group-item" style="font-weight: 700;">
+              <li class="list-group-item" style="font-weight: bold;">
                 <div class="row mx-0 d-flex align-items-center">
                   <div class="col-4 col-sm-4 col-md-3 col-lg-3 px-0">Producto</div>
                   <div class="col-3 col-sm-2 col-md-3 col-lg-3 px-0">Precio</div>
@@ -56,8 +56,8 @@
                   <!-- Precio -->
                   <div class="col-3 col-sm-2 col-md-3 col-lg-3 px-0">
                     <div class="row m-0">
-                      <div class="col-12 col-lg-12 col-xl-6 px-0" style="color: #d4da8f">  Bs. {{p.precio_bs}}</div>    
-                      <div class="col-12 col-lg-12 col-xl-6 px-0" style="color: #a7e29eee;">  Arg. {{p.precio_arg}}</div>    
+                      <div class="col-12 col-lg-12 col-xl-6 px-0">  Bs. {{p.precio_bs}}</div>    
+                      <div class="col-12 col-lg-12 col-xl-6 px-0" style="color: #158403ee;">  Arg. {{p.precio_arg}}</div>    
                     </div>                    
                   </div>
                   <!-- Descripcion -->
