--- a/Frontend/proyect_frontend/src/app/components/productos/productos.component.css
+++ b/Frontend/proyect_frontend/src/app/components/productos/productos.component.css
@@ -18,7 +18,8 @@
   width: 175px;
   height: 34px;
   padding: 0px 11px;
-  background-color: #d4d4d4;
+  background-color: #336c8c;
+  color: #e5e5e5;
   border: none;
 }
 
@@ -66,8 +67,8 @@
 }
 
 .content-modal{
-  background: #3c4756;
-  color: #f3f3f3;
+  background: #f3f3f3;
+  /* color: #f3f3f3; */
   width: 80%;
   font-size: 18px;
   font-weight: 500;
@@ -88,8 +89,8 @@
 .content-modal form input[type="password"],
 .content-modal form input[type="number"],
 .custom-select{
-  color: #eaeaea;
-  background: #ffffff21;
+  color: #0a0a0a;
+  background: #e5e5e5;
   border: none;
   padding: 3px 12px;
 }
@@ -97,7 +98,7 @@
 /* Estilos para el select option */
 .custom-select option{
   color: #eaeaea;
-  background: #3c4756;
+  background: #dcdcdc;
 }
 
 
@@ -105,7 +106,7 @@
 .content-modal form input[type="password"]::placeholder,
 .content-modal form input[type="number"]::placeholder {
   font-size: 15px;
-  color: #c0c0c04b; /* Cambia el color según tu preferencia */
+  color: #c0c0c000; /* Cambia el color según tu preferencia */
 }
 .btn-opciones{
   padding: 0;
